Fixed languages spacing.

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,7 +92,7 @@ body {
 }
 
 .animate-slide {
-  animation: slide 20s linear infinite;
+  animation: slide 10s linear infinite;
 }
 
 .animate-slide:hover {
